--- a/src/index.css
+++ b/src/index.css
@@ -6,27 +6,44 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #1e1e1e;
+  position: relative;
+  font-family: "Lato", sans-serif;
+}
+
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: "Lato", sans-serif;
 }
 
 .container {
-  margin: 30px auto;
+  box-shadow: 0 8px 50px 0 black;
+  margin: 60px auto;
+  background-color: white;
+  padding: 20px;
   width: 350px;
+}
+
+.title {
+  margin: 0px auto 20px;
 }
 
 h1 {
   letter-spacing: 1px;
   margin: 0;
+}
+
+.clear-btn {
+  background-color: #df3020;
 }
 
 h3 {
@@ -89,7 +106,6 @@ input[type="number"] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
@@ -98,6 +114,10 @@ input[type="number"] {
   margin: 10px 0 30px;
   padding: 10px;
   width: 100%;
+}
+
+.add-btn {
+  background-color: #0094da;
 }
 
 .btn:focus,
